--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MovieDetailActivity"
-    android:background="#404040">
+    android:background="#282828">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -28,9 +28,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@mipmap/ic_launcher"
                 android:padding="0dp"
-                android:layout_margin="0dp"
-                android:scaleType="fitXY"
-                />
+                android:layout_margin="5dp"
+                android:scaleType="fitXY" />
 
             <ImageView
                 android:id="@+id/iv_mainPoster"
@@ -50,7 +49,7 @@
 
             <TextView
                 android:id="@+id/tv_movieTitle"
-                android:layout_width="202dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
@@ -59,12 +58,13 @@
                 android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="@string/movie_title"
+                android:textAllCaps="true"
+                android:textColor="#FFFFFF"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_mainPoster"
-                android:textColor="#FFFFFF"/>
+                app:layout_constraintTop_toBottomOf="@+id/iv_mainPoster" />
 
 
             <TextView
@@ -75,13 +75,14 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="@string/release_date"
+                android:textAllCaps="true"
+                android:textColor="#FFFFFF"
+                android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_movieTitle"
-                android:textColor="#FFFFFF"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_movieTitle" />
 
             <TextView
                 android:id="@+id/tv_movieDescription"
@@ -94,11 +95,12 @@
                 android:layout_marginTop="8dp"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/movie_description"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate"
-                android:textColor="#FFFFFF"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate" />
         </android.support.constraint.ConstraintLayout>
 
 
