--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -29,7 +29,8 @@
                 app:srcCompat="@mipmap/ic_launcher"
                 android:padding="0dp"
                 android:layout_margin="5dp"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                android:contentDescription="@string/movie_title"/>
 
             <ImageView
                 android:id="@+id/iv_mainPoster"
@@ -45,7 +46,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@mipmap/ic_launcher"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                android:contentDescription="@string/movie_title"/>
 
             <TextView
                 android:id="@+id/tv_movieTitle"
