--- a/app/src/main/res/layout/movie_layout_list.xml
+++ b/app/src/main/res/layout/movie_layout_list.xml
@@ -29,7 +29,8 @@
             app:srcCompat="@mipmap/ic_launcher"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="0dp"
-            android:paddingBottom="50dp"/>
+            android:paddingBottom="50dp"
+            android:contentDescription="@string/movie_title"/>
 
         <TextView
             android:id="@+id/tv_mainTitle"
