Added SQLite Insert and Delete for Favorites

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -74,8 +74,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginBottom="28dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="@string/vote_average"
@@ -84,9 +84,11 @@
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/tv_movieTitle"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/iv_mainPoster"
+                app:layout_constraintHorizontal_bias="0.803"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.992" />
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/tv_releaseDate"
@@ -125,21 +127,56 @@
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="55dp"
+                android:layout_height="62dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="264dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_voteAverage"
+                app:layout_constraintEnd_toStartOf="@+id/tv_voteAverage"
+                app:layout_constraintHorizontal_bias="0.323"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@mipmap/ic_launcher_foreground" />
+
+            <Button
+                android:id="@+id/bt_favorite"
+                android:layout_width="98dp"
+                android:layout_height="62dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="260dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/action_favorite"
+                android:textSize="8sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_movieTitle"
-                app:layout_constraintEnd_toStartOf="@+id/tv_voteAverage"
-                app:layout_constraintHorizontal_bias="0.111"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_mainPoster"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@mipmap/ic_launcher_foreground" />
+                app:layout_constraintVertical_bias="0.979" />
+
+            <Button
+                android:id="@+id/bt_unfavorite"
+                android:layout_width="98dp"
+                android:layout_height="62dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/action_unfavorite"
+                android:textSize="8sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@+id/tv_movieTitle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iv_mainPoster"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.979" />
 
         </android.support.constraint.ConstraintLayout>
 
