--- a/app/src/main/res/layout/movie_layout_list.xml
+++ b/app/src/main/res/layout/movie_layout_list.xml
@@ -22,25 +22,25 @@
             android:id="@+id/iv_moviePoster"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:contentDescription="@string/movie_title"
+            android:paddingBottom="50dp"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@mipmap/ic_launcher"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="0dp"
-            android:paddingBottom="50dp"
-            android:contentDescription="@string/movie_title"/>
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/tv_mainTitle"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_width="152dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:gravity="center"
@@ -53,10 +53,24 @@
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/iv_moviePoster"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
+
+        <ImageView
+            android:id="@+id/iv_favorite"
+            android:layout_width="81dp"
+            android:layout_height="52dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:scaleType="fitEnd"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_favorite" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
