--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -4,33 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailActivity"
-    android:background="#282828">
+    android:background="#282828"
+    android:focusableInTouchMode="true"
+    tools:context=".MovieDetailActivity">
 
     <ScrollView
+        android:id="@+id/sv_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
             android:orientation="vertical">
+
 
             <ImageView
                 android:id="@+id/iv_backPoster"
                 android:layout_width="match_parent"
                 android:layout_height="244dp"
+                android:layout_margin="5dp"
                 android:adjustViewBounds="true"
+                android:contentDescription="@string/movie_title"
+                android:padding="0dp"
+                android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:padding="0dp"
-                android:layout_margin="5dp"
-                android:scaleType="fitXY"
-                android:contentDescription="@string/movie_title"/>
+                app:srcCompat="@mipmap/ic_launcher" />
 
             <ImageView
                 android:id="@+id/iv_mainPoster"
@@ -42,15 +45,15 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="116dp"
                 android:background="@drawable/image_border"
+                android:contentDescription="@string/movie_title"
+                android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:scaleType="fitXY"
-                android:contentDescription="@string/movie_title"/>
+                app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
-                android:id="@+id/tv_movieTitle"
+                android:id="@+id/tv_trailerWord"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginEnd="8dp"
@@ -83,7 +86,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/tv_movieTitle"
+                app:layout_constraintBottom_toTopOf="@+id/tv_trailerWord"
                 app:layout_constraintEnd_toStartOf="@+id/iv_mainPoster"
                 app:layout_constraintHorizontal_bias="0.803"
                 app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +108,7 @@
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_movieTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_trailerWord" />
 
             <TextView
                 android:id="@+id/tv_movieDescription"
@@ -153,7 +156,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/action_favorite"
                 android:textSize="8sp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_movieTitle"
+                app:layout_constraintBottom_toTopOf="@+id/tv_trailerWord"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_mainPoster"
                 app:layout_constraintTop_toTopOf="parent"
@@ -172,14 +175,43 @@
                 android:text="@string/action_unfavorite"
                 android:textSize="8sp"
                 android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@+id/tv_movieTitle"
+                app:layout_constraintBottom_toTopOf="@+id/tv_trailerWord"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_mainPoster"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.979" />
 
+            <include
+                android:id="@+id/include2"
+                layout="@layout/movie_trailer_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_movieDescription" />
+
+            <include
+                android:id="@+id/include3"
+                layout="@layout/movie_reviews_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/include2"
+                app:layout_constraintVertical_bias="0.0" />
+
         </android.support.constraint.ConstraintLayout>
 
-
     </ScrollView>
+
 </RelativeLayout>
