Somehow fixed bug

--- a/app/src/main/res/layout/movie_reviews_list.xml
+++ b/app/src/main/res/layout/movie_reviews_list.xml
@@ -10,7 +10,6 @@
         android:id="@+id/tv_review"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -19,12 +18,10 @@
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_reviewerName"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_reviewerName" />
 
     <TextView
         android:id="@+id/tv_reviewerName"
