--- a/app/src/main/res/layout/movie_reviews_detail.xml
+++ b/app/src/main/res/layout/movie_reviews_detail.xml
@@ -34,6 +34,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:fillViewport="true"
             android:scrollbars="vertical"
